--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
                 <li><a href="notes.html">Notes</a></li>
                 <li><a href="tips.html">Tips</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li class="btn signin"><a href="signin.html">Sign In</a></li>
+                <li class="btn signin"><a href="signIn.html">Sign In</a></li>
                 <li class="btn join"><a href="join.html">Join</a></li>
             </ul>
         </nav>
